feat: Estrutura da header-mobile

--- a/index.html
+++ b/index.html
@@ -47,6 +47,19 @@
         <a href="#">Perfil</a>
       </div>
     </header>
+    <header class="mobile">
+      <span class="cabeçalho__menu-hamburguer"></span>
+      <img src="./src/assets/img/Logo.svg" alt="Logo da AluraBooks" />
+      <a href="#"
+        ><img src="./src/assets/img/Favoritos.svg" alt="Meus favoritos"
+      /></a>
+      <a href="#"
+        ><img src="./src/assets/img/Compras.svg" alt="Carrinho de compras"
+      /></a>
+      <a href="#"
+        ><img src="./src/assets/img/Usuario.svg" alt="Meu perfil"
+      /></a>
+    </header>
     <section class="pesquisa">
       <h1>Já sabe por onde começar?</h1>
       <p>Encontre em nossa estante o que precisa para seu desenvolvimento!</p>
